modules tutorial ready

--- a/tutorials/modules/modules.ipynb
+++ b/tutorials/modules/modules.ipynb
@@ -80,12 +80,12 @@
     "\n",
     "Open a ssh session in Kabré and try the four commands presented above.\n",
     "\n",
-    "`modules.py` mimics this behavior. To kill that instance of python, press Ctrl-D."
+    "`modules.py` mimics this behavior:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +95,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-e63f39f9342c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"python3\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-e63f39f9342c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"python3\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'modules'"
      ]
     }
    ],
    "source": [
     "import modules\n",
-    "modules.run(\"python3\")"
+    "modules.run(\"gcc -v\")"
    ]
   },
   {
@@ -114,8 +114,8 @@
    "outputs": [],
    "source": [
     "import modules\n",
-    "modules.load('intelpython/3.5')\n",
-    "modules.run('python3')"
+    "modules.load('gcc/6.2.0')\n",
+    "modules.run('gcc -v')"
    ]
   },
   {
@@ -201,6 +201,80 @@
     "\n",
     "\n",
     "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PBS scripting\n",
+    "\n",
+    "A PBS script tells Torque (the `qsub` command) how to run a job and what the job is, for example (taken from `kabre_usage` tutorial):"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#PBS -N pi_threads\n",
+    "#PBS -q phi-n1h72\n",
+    "#PBS -l nodes=1:ppn=1\n",
+    "#PBS -l walltime=00:15:00\n",
+    "\n",
+    "time ./pi_threads 64 100000000000 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's typical bash code. For simple jobs, writting small bash scripts is not a big deal. But sometimes, programming in bash becomes a real pain: the parser complains for meaningless white spaces, lack of handy data structures, absense of standard library, mathematical functions. \n",
+    "\n",
+    "The good news is that Torque is not attached to a particular interpreter, if you don't tell it what to use, bash will capture the job, but if indicated, Torque would call a particular interpreter, for example, Python. \n",
+    "\n",
+    "Writing a shebang at the start do the trick. Now, the problem is how to configure the requiered environment variables to compile an run appropiately. In bash, that was the job of `module` utility, here the miniclone `modules` will help us. "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#!/opt/compilers/python-3.5.2/bin/python3\n",
+    "\n",
+    "#PBS -N pi_threads\n",
+    "#PBS -q phi-n1h72\n",
+    "#PBS -l nodes=1:ppn=1\n",
+    "#PBS -l walltime=00:15:00\n",
+    "\n",
+    "import modules\n",
+    "\n",
+    "modules.run(\"time ./pi_threads 64 100000000000\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Install and configuration\n",
+    "\n",
+    "If you are running on Kabré, everything should work out-of-the-box, if it doesn't, write to cnca@cenat.ac.cr. \n",
+    "Modules.py source code is hosted on github, together with other utilities, this is the [repo](https://github.com/CNCA-CeNAT/Kabre-tools). \n",
+    "\n",
+    "Just put `modules.py` somewhere and add the following line to your bashrc:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "export PYTHONPATH=$PYTHONPATH:$PATH_TO_MODULES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And that's all you need to use modules. "
    ]
   }
  ],
