modules tutorial, print stderr of gcc

--- a/tutorials/modules/modules.ipynb
+++ b/tutorials/modules/modules.ipynb
@@ -85,37 +85,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'modules'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-e63f39f9342c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"python3\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'modules'"
-     ]
+     "data": {
+      "text/plain": [
+       "'Using built-in specs.\\nCOLLECT_GCC=gcc\\nCOLLECT_LTO_WRAPPER=/opt/compilers/gcc-6.2.0/libexec/gcc/x86_64-pc-linux-gnu/6.2.0/lto-wrapper\\nTarget: x86_64-pc-linux-gnu\\nConfigured with: ../gcc-6.2.0/configure --prefix=/opt/compilers/gcc-6.2.0 --enable-shared --disable-multilib --with-isl=/opt/libs/isl-0.17 --with-gmp=/opt/libs/gmp-6.1.1 --with-mpfr=/opt/libs/mpfr-3.1.5 --with-mpc=/opt/libs/mpc-1.0.3 --with-tune=generic --enable-languages=c,c++,fortran --enable-threads=posix --enable-__cxa_atexit --with-system-zlib --enable-plugin --enable-initfini-array --with-arch_32=x86-64 --enable-bootstrap --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id\\nThread model: posix\\ngcc version 6.2.0 (GCC) \\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import modules\n",
-    "modules.run(\"gcc -v\")"
+    "p = modules.run(\"gcc -v\", capture_output=True)\n",
+    "p.stderr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Using built-in specs.\\nCOLLECT_GCC=gcc\\nCOLLECT_LTO_WRAPPER=/opt/compilers/gcc-6.2.0/libexec/gcc/x86_64-pc-linux-gnu/6.2.0/lto-wrapper\\nTarget: x86_64-pc-linux-gnu\\nConfigured with: ../gcc-6.2.0/configure --prefix=/opt/compilers/gcc-6.2.0 --enable-shared --disable-multilib --with-isl=/opt/libs/isl-0.17 --with-gmp=/opt/libs/gmp-6.1.1 --with-mpfr=/opt/libs/mpfr-3.1.5 --with-mpc=/opt/libs/mpc-1.0.3 --with-tune=generic --enable-languages=c,c++,fortran --enable-threads=posix --enable-__cxa_atexit --with-system-zlib --enable-plugin --enable-initfini-array --with-arch_32=x86-64 --enable-bootstrap --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id\\nThread model: posix\\ngcc version 6.2.0 (GCC) \\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import modules\n",
     "modules.load('gcc/6.2.0')\n",
-    "modules.run('gcc -v')"
+    "p = modules.run('gcc -v', capture_output=True)\n",
+    "p.stderr"
    ]
   },
   {
