--- a/tutorials/modules/modules.ipynb
+++ b/tutorials/modules/modules.ipynb
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Using built-in specs.\\nCOLLECT_GCC=gcc\\nCOLLECT_LTO_WRAPPER=/opt/compilers/gcc-6.2.0/libexec/gcc/x86_64-pc-linux-gnu/6.2.0/lto-wrapper\\nTarget: x86_64-pc-linux-gnu\\nConfigured with: ../gcc-6.2.0/configure --prefix=/opt/compilers/gcc-6.2.0 --enable-shared --disable-multilib --with-isl=/opt/libs/isl-0.17 --with-gmp=/opt/libs/gmp-6.1.1 --with-mpfr=/opt/libs/mpfr-3.1.5 --with-mpc=/opt/libs/mpc-1.0.3 --with-tune=generic --enable-languages=c,c++,fortran --enable-threads=posix --enable-__cxa_atexit --with-system-zlib --enable-plugin --enable-initfini-array --with-arch_32=x86-64 --enable-bootstrap --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id\\nThread model: posix\\ngcc version 6.2.0 (GCC) \\n'"
+       "'Usando especificaciones internas.\\nCOLLECT_GCC=gcc\\nCOLLECT_LTO_WRAPPER=/usr/libexec/gcc/x86_64-redhat-linux/4.8.5/lto-wrapper\\nObjetivo: x86_64-redhat-linux\\nConfigurado con: ../configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --with-bugurl=http://bugzilla.redhat.com/bugzilla --enable-bootstrap --enable-shared --enable-threads=posix --enable-checking=release --with-system-zlib --enable-__cxa_atexit --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id --with-linker-hash-style=gnu --enable-languages=c,c++,objc,obj-c++,java,fortran,ada,go,lto --enable-plugin --enable-initfini-array --disable-libgcj --with-isl=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/isl-install --with-cloog=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/cloog-install --enable-gnu-indirect-function --with-tune=generic --with-arch_32=x86-64 --build=x86_64-redhat-linux\\nModelo de hilos: posix\\ngcc versión 4.8.5 20150623 (Red Hat 4.8.5-16) (GCC) \\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Using built-in specs.\\nCOLLECT_GCC=gcc\\nCOLLECT_LTO_WRAPPER=/opt/compilers/gcc-6.2.0/libexec/gcc/x86_64-pc-linux-gnu/6.2.0/lto-wrapper\\nTarget: x86_64-pc-linux-gnu\\nConfigured with: ../gcc-6.2.0/configure --prefix=/opt/compilers/gcc-6.2.0 --enable-shared --disable-multilib --with-isl=/opt/libs/isl-0.17 --with-gmp=/opt/libs/gmp-6.1.1 --with-mpfr=/opt/libs/mpfr-3.1.5 --with-mpc=/opt/libs/mpc-1.0.3 --with-tune=generic --enable-languages=c,c++,fortran --enable-threads=posix --enable-__cxa_atexit --with-system-zlib --enable-plugin --enable-initfini-array --with-arch_32=x86-64 --enable-bootstrap --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id\\nThread model: posix\\ngcc version 6.2.0 (GCC) \\n'"
+       "'Usando especificaciones internas.\\nCOLLECT_GCC=gcc\\nCOLLECT_LTO_WRAPPER=/opt/compilers/gcc-6.2.0/libexec/gcc/x86_64-pc-linux-gnu/6.2.0/lto-wrapper\\nObjetivo: x86_64-pc-linux-gnu\\nConfigurado con: ../gcc-6.2.0/configure --prefix=/opt/compilers/gcc-6.2.0 --enable-shared --disable-multilib --with-isl=/opt/libs/isl-0.17 --with-gmp=/opt/libs/gmp-6.1.1 --with-mpfr=/opt/libs/mpfr-3.1.5 --with-mpc=/opt/libs/mpc-1.0.3 --with-tune=generic --enable-languages=c,c++,fortran --enable-threads=posix --enable-__cxa_atexit --with-system-zlib --enable-plugin --enable-initfini-array --with-arch_32=x86-64 --enable-bootstrap --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id\\nModelo de hilos: posix\\ngcc versión 6.2.0 (GCC) \\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
